fix variation image flicker issue when default variations are set closes #7904

--- a/assets/css/woocommerce.scss
+++ b/assets/css/woocommerce.scss
@@ -1925,6 +1925,15 @@ p.demo_store {
 	}
 }
 
+/* added to get around variation image flicker issue */
+.woocommerce.single-product.has-default-attributes {
+	div.product {
+		> .images {
+			opacity: 0;
+		}
+	}
+}
+
 /**
  * Twenty Eleven specific styles
  */
